--- a/index.html
+++ b/index.html
@@ -8,30 +8,35 @@
 </head>
 
 <body>
-   <h1>Pagina sobre tecnologia web</h1>
-   <h2>oque é html?</h2>
-    <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam accusantium doloribus neque architecto eveniet, sed cum porro, autem, perspiciatis illum impedit! Dolor incidunt sapiente assumenda culpa reprehenderit quo, architecto recusandae!     
-    </p>
-   
-    <h3>oque é css?</h3>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum sint ex totam eum necessitatibus. Delectus ipsa repellat distinctio! Placeat quos natus libero obcaecati harum id adipisci laudantium commodi sed repellendus.
-   </p>
-   
-   <h4>oque é Js</h4>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nisi voluptas harum quidem quaerat placeat neque aspernatur hic dolore voluptatibus recusandae numquam beatae illo sequi tempora, a, eligendi commodi tenetur.
-   </p>
-   
-   <h2>Tecnologias</h2>
-   <ol>
-    <li>Html</li>
-    <li>CSS</li>
-    <li>JS</li>
-    <li>PHP</li>
-    <li>Java</li>
-    <li>Phyton</li>
-   </ol>
+    <h1>Desenvolvimentp web</h1>
 
+    <h2>oque é html?</h2>
+   <p>
+     HTML is the standard markup language for creating Web pages.
+   </p>
+   
+    <Ul>
+     <li>HTML stands for Hyper Text Markup Language</li>
+     <li>HTML is the standard markup language for creating Web pages</li>
+     <li>HTML describes the structure of a Web page</li>
+     <li>HTML consists of a series of elements</li>
+     <li>HTML elements tell the browser how to display the content</li>
+     <li>HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.    </li>
+   </Ul>
+  
+   <img src="unnamed.png" alt="Estrutura basica HTML">
+   
+    <h2>oque é css?</h2>
+   <p>
+     Css é a linguagem que nos usamos para estilizar uma pagina web
+   </p>
+   <Ul>
+     <li>CSS stands for Cascading Style Sheets</li>
+     <li>CSS describes how HTML elements are to be displayed on screen, paper, or in other media</li>
+     <li>CSS saves a lot of work. It can control the layout of multiple web pages all at onc</li>
+     <li>External stylesheets are stored in CSS files</li>
+   </Ul>
+ 
 </body>
 
 </html>
