--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
+    <style>
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 30%;
+    }
+    
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+    
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+    </style>
 </head>
 
 <body>
-    <h1>Desenvolvimentp web</h1>
+ <h1>Desenvolvimentp web</h1>
 
-    <h2>oque é html?</h2>
+    <h2>Oque é html?</h2>
    <p>
      HTML is the standard markup language for creating Web pages.
    </p>
@@ -20,13 +37,15 @@
      <li>HTML is the standard markup language for creating Web pages</li>
      <li>HTML describes the structure of a Web page</li>
      <li>HTML consists of a series of elements</li>
-     <li>HTML elements tell the browser how to display the content</li>
+     <li>HTML elements tell the browser how to display the content
+
+     </li>
      <li>HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.    </li>
    </Ul>
   
-   <img src="unnamed.png" alt="Estrutura basica HTML">
+   <img src="img/Estrutura basica HTMl.png" alt="Estrutura basica HTML">
    
-    <h2>oque é css?</h2>
+    <h2>Oque é css?</h2>
    <p>
      Css é a linguagem que nos usamos para estilizar uma pagina web
    </p>
@@ -36,6 +55,66 @@
      <li>CSS saves a lot of work. It can control the layout of multiple web pages all at onc</li>
      <li>External stylesheets are stored in CSS files</li>
    </Ul>
+   
+   <img src="img/Estrutura basica css.png" alt="Estrutura basica CSS">
+
+   <H2>Oque é JS?</H2>
+
+   <p>
+    JavaScript é uma linguagem de programação interpretada estruturada, de script em alto nível com tipagem dinâmica fraca e multiparadigma. Juntamente com HTML e CSS, o JavaScript é uma das três principais tecnologias da World Wide Web.
+   </p>
+   <Ul>
+    <li>JavaScript is the world's most popular programming language.</li>
+    <li>JavaScript is the programming language of the Web.</li>
+    <li>JavaScript is easy to learn.</li>
+    <li>This tutorial will teach you JavaScript from basic to advanced.</li>
+   </Ul>
+
+   <img src="img/Estrutura basica JS.png" alt="Estrutura basica JS">
+    <table>
+    <tr>
+       <th>hora</th>
+       <th>min</th>
+       <th>valor</th>
+       <th>total</th>
+       <th>ano</th>
+    </tr>
+    <tr>
+    <td>15</td>
+    <td>45</td>
+    <td>25</td>
+    <td>669,37</td>
+    <td>2021</td>
+    <tr>
+      <td>15</td>
+      <td>45</td>
+      <td>100</td>
+      <td>2677,50</td>
+      <td>2022</td>
+    </tr>
+    <tr>
+      <td>20</td>
+      <td>0</td>
+      <td>25</td>
+      <td>850,00</td>
+      <td>2023</td>
+    </tr>
+  </table>
+      <h2>Tabela de Atributo</h2>
+   <table>
+    <tr>
+      <th>Atributo</th>
+      <th>Descrição</th>
+      <th>Exemplo</th>
+    </tr>
+    <tr>
+      <td>P</td>
+      <td>cria um paragrafo</td>
+      <td></td>
+    </tr>
+   </table>
+
+   
  
 </body>
 
