--- a/index.html
+++ b/index.html
@@ -6,26 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
     <style>
-    table {
-      font-family: arial, sans-serif;
-      border-collapse: collapse;
-      width: 30%;
-    }
-    
-    td, th {
-      border: 1px solid #dddddd;
-      text-align: left;
-      padding: 8px;
-    }
-    
-    tr:nth-child(even) {
-      background-color: #dddddd;
-    }
+   body{
+    background-color: aquamarine; margin:auto 70px
+  }
+   h2{
+    color: rgb(84, 59, 129);
+  }
+   li{
+    list-style-type: circle; }
+   table{ 
+    border-collapse: collapse; text-align: center;
+     }
+   th{
+    color: brown;
+   }
+   td{
+    text-align: center;
+   }
+   
     </style>
 </head>
 
 <body>
- <h1>Desenvolvimentp web</h1>
+ <h1 style="color: darkred; font-size: 55px;">Desenvolvimentp web</h1>
 
     <h2>Oque é html?</h2>
    <p>
@@ -71,7 +74,7 @@
    </Ul>
 
    <img src="img/Estrutura basica JS.png" alt="Estrutura basica JS">
-    <table>
+    <table style="text-align: center;">
     <tr>
        <th>hora</th>
        <th>min</th>
@@ -88,7 +91,7 @@
     <tr>
       <td>15</td>
       <td>45</td>
-      <td>100</td>
+      <td style="color: green; background-color: brown;">100</td>
       <td>2677,50</td>
       <td>2022</td>
     </tr>
