--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
+    <link rel="stylesheet" href="CSS/estilo.css">
     <style>
    body{
     background-color: aquamarine; margin:auto 70px
   }
-   h2{
-    color: rgb(84, 59, 129);
-  }
+ 
    li{
     list-style-type: circle; }
    table{ 
@@ -28,7 +27,7 @@
 </head>
 
 <body>
- <h1 style="color: darkred; font-size: 55px;">Desenvolvimentp web</h1>
+ <h1>Desenvolvimentp web</h1>
  <p>TESTE</p>
 
     <h2>Oque é html?</h2>
@@ -47,7 +46,7 @@
      <li>HTML elements label pieces of content such as "this is a heading", "this is a paragraph", "this is a link", etc.    </li>
    </Ul>
   
-   <img src="img/Estrutura basica HTMl.png" alt="Estrutura basica HTML">
+   <img src="img/EstruturaHTML.jpg" alt="Estrutura basica HTML">
    
     <h2>Oque é css?</h2>
    <p>
@@ -119,7 +118,8 @@
    </table>
 
    
- 
+ <a href="outro.html">outro </a>
+
 </body>
 
 </html>
