--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/estilo.css">
+    <link rel="stylesheet" href="CSS/venom.css">
+    <link rel="stylesheet" href="CSS/reset.css">
 </head>
 <body>
     <header>
         <div>
-            <p>Logo</p>
+           <img src="img/venomdiv2.jpeg" alt="div venom">
         </div>
         <nav>
-            <p>Menu</p>
+            <p style="color: aliceblue;">Menu</p>
         </nav>
     </header>
     <main>
-        <section>Sessão 1</section>
-        <section>Sessão 2</section>
-        <section>Sessão 3</section>
+        <h1>Origem</h1>
+        <section>
+            
+            <p>
+                Sua historia tem inicio nas guerras secretas (Evento que reuniu todos os personagem da marvel), em certo momento, Peter tem seu traje destruido
+            </p>
+        </section>
+        <section>Section 2</section>    
+        <section>Section 3</section>
     </main>
     <footer>
         <p>Footer</p>
