--- a/MeuPrimeiroSite/index.html
+++ b/MeuPrimeiroSite/index.html
@@ -40,6 +40,14 @@
               <li>Venom</li>
               <li>Venom</li>
             </ul>
+            <section>
+                <h2>Linguagens</h2>
+                <table>
+                    <tr>
+                        <th>2021  </th>
+                    </tr>
+                </table>
+            </section>
     </main>
     <footer>
         <p style="color: aliceblue;">Footer</p>
