--- a/MeuPrimeiroSite/Homem aranha/index.html
+++ b/MeuPrimeiroSite/Homem aranha/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homem aranha</title>
     <link rel="stylesheet" href="CSS/venom.css">
     <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="shortcut icon" href="Homem aranha/img/div.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,7 +22,7 @@
     </header>
     <main>
         <section>
-            <h1>Origem</h1>
+            <h1 class="titulos">Origem</h1>
             <p>
                 Sua historia tem inicio nas guerras secretas (Evento que reuniu todos os personagem da marvel),Em dado momento, o traje do Homem-Aranha é danificado em um combate, mas ele encontra uma máquina capaz de restaurar trajes.
 
@@ -27,38 +31,38 @@
         </section>
        
         <section>
-            <h1>Um novo hospedeiro</h1>
+            <h1 class="titulos">Um novo hospedeiro</h1>
             <p>
                 O simbionte cheio de odio por Peter ter o deixado, se funde ao fotógrafo Eddie Brock, rival de Peter no mundo do jornalismo, que culpa o personagem pela sua decadência. Juntando a fome de ódio com a vontade de destruir o Homem Aranha, Brock e o simbionte viraram o Venom como o conhecemos, o monstro com os mesmos poderes do Aranha, mas ainda mais perigoso.
             </p>
         </section>
         
         <section>
-            <h1>Sede de sangue</h1>
+            <h1 class="titulos">Sede de sangue</h1>
             <p>
                 Também citado anteriormente, a série Maximum Carnage, publicada em 1992, apresenta a sede de sangue de Venom. Ademais, a partir desse ponto, ele se estabelece como um dos inimigos mais letais do Aranha. Contudo, há ainda as narrativas dos principais truques para combater o alienígena, envolvendo prender um fragmento dele em prisões de segurança máxima.
             </p>
-            <h1>O recomeço de Venom</h1>
+            <h1 class="titulos">O recomeço de Venom</h1>
             <p>
                 Posteriormente ao Maximum Carnage, Venom entra num acordo com seu rival e abandona Nova York. Porém, recomeça sua vida em São Francisco, mas passa a ser perseguido pelo pai de uma de suas vítimas e um grupo de mercenários super-poderosos. Entretanto, o Homem-Aranha acaba juntando-se a ele para combatê-los, a fim de evitar que ele retome a vida no crime.
             </p>
-            <h1>Origem secreta</h1>
+            <h1 class="titulos">Origem secreta</h1>
             <p>
                 Em resumo, a edição Planeta dos Simbiontes de 1995 conta a história de Venom desde o começo. Portanto, apresenta o planeta Klyntar, com seus esquemas de poder e espécies cruéis. Ademais, apresenta Eddie Brock lutando contra os alienígenas ao lado do Homem-Aranha, porém, contam com a ajuda do lado bonzinho de Venom para vencer sua própria espécie.
             </p>
-            <h1>Um novo hospedeiro</h1>
+            <h1 class="titulos">Um novo hospedeiro</h1>
             <p>
                 Basicamente, Marvel Knighsts Spider-man é uma edição que mostra um grupo de vilões chamados Doze Sinistros. Sobretudo, essa organização parte de Norman Osborn, com a intenção de combater o Homem-Aranha. Contudo, ele acaba comprando Venom em um leilão de malfeitores e cede um novo hospedeiro para que ele participe do grupo.
             </p>
-            <h1>Reabilitação de vilões</h1>
+            <h1 class="titulos">Reabilitação de vilões</h1>
             <p>
                 Em resumo, Invasão Secreta é um grande mega-crossover, que apresenta Norman Osborn como novo diretor da SHIELD. Nesse sentido, ele até mesmo torna-se o Patriota de Ferro, usando uma das armaduras de Tony Stark para proteger as pessoas. Além disso, cria uma nova equipe de Vingadores, usando ex-vilões como o próprio Venom.
             </p>
-            <h1>Agente Venom</h1>
+            <h1 class="titulos">Agente Venom</h1>
             <p>
                 Em resumo, as edições de 2010 apresentam Venom como simbionte no corpo de Flash Thompson. Dessa forma, parte de um projeto de reformulação do personagem, de modo que agora ele trabalhe para o bem. Ademais, apresenta-o na condição d um simbionte que somente pode habitar o corpo do ex-militar por 48 horas, antes que tome o controle dele completamente.
             </p>
-            <h1>De volta às origens</h1>
+            <h1 class="titulos">De volta às origens</h1>
             <p>
                 Por fim, quando se separa de Flash Thompson, ele reaparece como produto no mercado negro de Nova York. Porém, está enfraquecido e buscando um hospedeiro que queira ser um herói como Thompson. Apesar disso, acaba caindo na mão de um ex-soldado maligno chamado Lee Price, que cria um novo Venom, reaflorando seu instinto assassino e criando o caos na cidade.
             </p>
