--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Homem aranha</title>
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/reset.css">
-
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho" id="grad1">
         <div class="logo" >
-           <img src="img/venomdiv2.jpeg" alt="div venom">
+           <img src="img/venom_logo_by_jmk_prime_d7npfny-fullview.png" alt="div venom">
         </div>
         <nav id="menu">
             <input type="checkbox" id="menu-toggle">
@@ -25,12 +26,10 @@
         </nav>
     </header>
     <main>
-        <div class="imagem1">
-            <img src="img/background site2.png" alt="">
-        </div>
-        <div class="divgr">
-         <section>   
+     <div class="divgr">
+        <section >   
              <h1 class="titulos">HQ's</h1>
+
              <h2 class="titulos">Origem</h2>
              <p>
                 Sua historia tem inicio nas guerras secretas (Evento que reuniu todos os personagem da marvel),Em dado momento, o traje do Homem-Aranha é danificado em um combate, mas ele encontra uma máquina capaz de restaurar trajes.
@@ -38,7 +37,9 @@
                 Porém, quando finalmente deixa a máquina, Peter Parker descobre que o seu traje vermelho e azul clássico fora substituído por um traje preto. Mais do que uma roupa, o traje foi concebido como um simbionte alienígena, com vida e vontade própria. Justamente por isso, a mudança amplificou os poderes de Parker. Mesmo após o fim da saga, ele retorna para a Terra com o novo visual, que é capaz de produzir teias orgânicas e se reconstitui sozinho. Após meses usando o traje, ele percebe que o alienígena pegou gosto pela briga contra os bandidos, passando a tomar o controle de Peter durante as noites, sem que o herói tivesse ideia das ações do simbionte.eter, então, decide se livrar do traje, não sem antes o simbionte armazenar as informações genéticas do herói, incluindo, claro, seus poderes.
              </p>   
 
-            <h2 class="titulos">Um novo hospedeiro</h2>
+        <div class="img1">
+            <img src="img/Venom _ O Uniforme Negro Maneiro fica melhor em Eddie Brock do que em Peter Parker_!.jpeg" alt="">
+        </div>
             <p>
                 O simbionte cheio de odio por Peter ter o deixado, se funde ao fotógrafo Eddie Brock, rival de Peter no mundo do jornalismo, que culpa o personagem pela sua decadência. Juntando a fome de ódio com a vontade de destruir o Homem Aranha, Brock e o simbionte viraram o Venom como o conhecemos, o monstro com os mesmos poderes do Aranha, mas ainda mais perigoso.
 
@@ -49,7 +50,7 @@
             <p>
                 Também citado anteriormente, a série Maximum Carnage, publicada em 1992, apresenta a sede de sangue de Venom. Ademais, a partir desse ponto, ele se estabelece como um dos inimigos mais letais do Aranha. Contudo, há ainda as narrativas dos principais truques para combater o alienígena, envolvendo prender um fragmento dele em prisões de segurança máxima.
             </p>
-            <h2 class="titulos">O recomeço de Venom</h2>
+
             <p>
                 Posteriormente ao Maximum Carnage, Venom entra num acordo com seu rival e abandona Nova York. Porém, recomeça sua vida em São Francisco, mas passa a ser perseguido pelo pai de uma de suas vítimas e um grupo de mercenários super-poderosos. Entretanto, o Homem-Aranha acaba juntando-se a ele para combatê-los, a fim de evitar que ele retome a vida no crime.
             </p>
@@ -57,21 +58,10 @@
             <p>
                 Em resumo, a edição Planeta dos Simbiontes de 1995 conta a história de Venom desde o começo. Portanto, apresenta o planeta Klyntar, com seus esquemas de poder e espécies cruéis. Ademais, apresenta Eddie Brock lutando contra os alienígenas ao lado do Homem-Aranha, porém, contam com a ajuda do lado bonzinho de Venom para vencer sua própria espécie.
             </p>
-            <h2 class="titulos">Um novo hospedeiro</h2>
-            <p>
-                Basicamente, Marvel Knighsts Spider-man é uma edição que mostra um grupo de vilões chamados Doze Sinistros. Sobretudo, essa organização parte de Norman Osborn, com a intenção de combater o Homem-Aranha. Contudo, ele acaba comprando Venom em um leilão de malfeitores e cede um novo hospedeiro para que ele participe do grupo.
-            </p>
-            <h2 class="titulos">Reabilitação de vilões</h2>
-            <p>
-                Em resumo, Invasão Secreta é um grande mega-crossover, que apresenta Norman Osborn como novo diretor da SHIELD. Nesse sentido, ele até mesmo torna-se o Patriota de Ferro, usando uma das armaduras de Tony Stark para proteger as pessoas. Além disso, cria uma nova equipe de Vingadores, usando ex-vilões como o próprio Venom.
-            </p>
+
             <h2 class="titulos">Agente Venom</h2>
             <p>
                 Em resumo, as edições de 2010 apresentam Venom como simbionte no corpo de Flash Thompson. Dessa forma, parte de um projeto de reformulação do personagem, de modo que agora ele trabalhe para o bem. Ademais, apresenta-o na condição d um simbionte que somente pode habitar o corpo do ex-militar por 48 horas, antes que tome o controle dele completamente.
-            </p>
-            <h2 class="titulos">De volta às origens</h2>
-            <p>
-                Por fim, quando se separa de Flash Thompson, ele reaparece como produto no mercado negro de Nova York. Porém, está enfraquecido e buscando um hospedeiro que queira ser um herói como Thompson. Apesar disso, acaba caindo na mão de um ex-soldado maligno chamado Lee Price, que cria um novo Venom, reaflorando seu instinto assassino e criando o caos na cidade.
             </p>
          </section>
          <section>
@@ -95,9 +85,14 @@
             </p>
 
             <h2 class="titulos">Marvel’s Spider Man 2</h2>
+
             <p>
                 No jogo "Marvel's Spider-Man 2," lançado em 2023 para PlayStation 5, Venom é um dos principais antagonistas e tem um papel significativo na trama. O jogo, desenvolvido pela Insomniac Games, continua a história de Peter Parker e Miles Morales enquanto enfrentam novas ameaças em Nova York.
-
+            </p>
+            <div class="img7">
+                <img src="img/background site.jpg" alt="">
+             </div>
+            <p>
                 A presença do simbionte afeta significativamente Peter Parker, inicialmente aumentando suas habilidades, mas também introduzindo uma luta interna contra a corrupção do poder. Isso cria um arco narrativo tenso e emocional, à medida que Peter lida com as consequências de estar ligado ao simbionte.
 
                 No jogo, o simbionte é apresentado como parte de uma tentativa desesperada de cura para a doença de Harry Osborn. Norman Osborn, seu pai, recorre ao simbionte como um último recurso para salvar a vida de Harry, resultando na transformação dele em Venom.
