--- a/index.html
+++ b/index.html
@@ -47,29 +47,50 @@
             </p>
 
             <h2 class="titulos">Sede de sangue</h2>
+            <div class="img2">
+                <img src="img/carnege.jpg" alt="">
+            </div>
             <p>
-                Também citado anteriormente, a série Maximum Carnage, publicada em 1992, apresenta a sede de sangue de Venom. Ademais, a partir desse ponto, ele se estabelece como um dos inimigos mais letais do Aranha. Contudo, há ainda as narrativas dos principais truques para combater o alienígena, envolvendo prender um fragmento dele em prisões de segurança máxima.
+                Essa série é centrada no personagem Venom e em seu inimigo Carnificina (Carnage), um dos vilões mais brutais e psicóticos do universo Marvel. A saga se estende por quatorze edições e envolve vários outros heróis e vilões.
+            
+            </p>
+
+            <p>
+                A história começa com a fuga de Cletus Kasady, o alter ego de Carnificina, do Instituto Ravencroft, uma instituição para criminosos insanos. Após escapar, Carnificina começa uma onda de assassinatos por Nova York, recrutando outros vilões para sua causa, incluindo Shriek, Doppelganger, Demogoblin e Carrion. Juntos, eles formam um grupo aterrorizante que espalha o caos pela cidade.
+                Para combater essa ameaça, Venom se junta a Homem-Aranha, mesmo sendo tradicionalmente um vilão ou anti-herói. Outros heróis que se unem à luta contra Carnificina e seus aliados incluem Capitão América, Gata Negra, Morbius, Deathlok, Firestar, Cloak e Dagger.
+                A narrativa da saga é marcada por batalhas intensas e pela luta interna dos personagens em lidar com a violência e a moralidade. A cidade de Nova York é retratada como um campo de batalha, com os heróis tentando conter a carnificina enquanto lidam com suas próprias questões pessoais.
             </p>
 
             <p>
                 Posteriormente ao Maximum Carnage, Venom entra num acordo com seu rival e abandona Nova York. Porém, recomeça sua vida em São Francisco, mas passa a ser perseguido pelo pai de uma de suas vítimas e um grupo de mercenários super-poderosos. Entretanto, o Homem-Aranha acaba juntando-se a ele para combatê-los, a fim de evitar que ele retome a vida no crime.
             </p>
             <h2 class="titulos">Origem secreta</h2>
+            <div class="img3">
+                <img src="img/knull.png" alt="">
+             </div>
             <p>
-                Em resumo, a edição Planeta dos Simbiontes de 1995 conta a história de Venom desde o começo. Portanto, apresenta o planeta Klyntar, com seus esquemas de poder e espécies cruéis. Ademais, apresenta Eddie Brock lutando contra os alienígenas ao lado do Homem-Aranha, porém, contam com a ajuda do lado bonzinho de Venom para vencer sua própria espécie.
+               A história começa com Eddie Brock, o Venom, tendo uma crise de consciência sobre sua conexão com o simbionte. Ele se 
+            sente cada vez mais desconfortável com o relacionamento simbiótico e decide se separar temporariamente do simbionte.
             </p>
-
-            <h2 class="titulos">Agente Venom</h2>
-            <p>
+             <p> Quando o simbionte percebe que Eddie está tentando abandoná-lo, ele solta um grito telepático de dor que atrai uma frota de simbiontes do planeta Klyntar para a Terra. Essa frota chega ao planeta e começa a tomar controle de humanos, criando um exército de simbiontes que representam uma ameaça global.
+            </p>
+             <p>
+                Klyntar é apresentado como o lar original dos simbiontes, também conhecidos como Klyntar, o mesmo nome do planeta. Os simbiontes foram criados pela entidade cósmica Knull, um deus das trevas que influenciou muitos dos simbiontes a serem malignos.
+             </p>
+             <h2 class="titulos">Agente Venom</h2>
+          <div class="img4">
+             <p>
                 Em resumo, as edições de 2010 apresentam Venom como simbionte no corpo de Flash Thompson. Dessa forma, parte de um projeto de reformulação do personagem, de modo que agora ele trabalhe para o bem. Ademais, apresenta-o na condição d um simbionte que somente pode habitar o corpo do ex-militar por 48 horas, antes que tome o controle dele completamente.
-            </p>
+             </p>
+                <img src="img/av.jpg" alt="">
+          </div>
          </section>
          <section>
             <h1 class="titulos">Filmes</h1>
-            <p>O personagem chegou às telas pela primeira vez em 2007, com o divisivo Homem-Aranha 3. O filme de Sam Raimi teve Topher Grace (That 70s Show) como o vilão, mas também mostrou o próprio Peter Parker (Tobey Maguire) sob o efeito do traje alienígena.
+            <p> O personagem chegou às telas pela primeira vez em 2007, com o divisivo Homem-Aranha 3. O filme de Sam Raimi teve Topher Grace (That 70s Show) como o vilão, mas também mostrou o próprio Peter Parker (Tobey Maguire) sob o efeito do traje alienígena.
             </p>
             
-            <p>Venom só voltou à telona 11 anos depois, com Tom Hardy, no filme que leva o nome do personagem. Um surpreendente sucesso de bilheteria, com mais de US$ 800 milhões arrecadados, o longa rendeu uma divertida sequência, Venom: Tempo de Carnificina (2021), e uma curtinha aparição especial em Homem-Aranha: Sem Volta Para Casa (2021), do dentro do MCU. Um terceiro filme do anti-herói está confirmado para julho de 2024 (se a greve dos atores não atrasar a produção).
+            <p> Venom só voltou à telona 11 anos depois, com Tom Hardy, no filme que leva o nome do personagem. Um surpreendente sucesso de bilheteria, com mais de US$ 800 milhões arrecadados, o longa rendeu uma divertida sequência, Venom: Tempo de Carnificina (2021), e uma curtinha aparição especial em Homem-Aranha: Sem Volta Para Casa (2021), do dentro do MCU. Um terceiro filme do anti-herói está confirmado para julho de 2024 (se a greve dos atores não atrasar a produção).
 
               </p>
          </section>
@@ -110,6 +131,8 @@
          </section>
         </div>
     </main>
-
+    <footer class="rodape">
+        <p>Footer</p>
+    </footer>
 </body>
 </html>
