--- a/index.html
+++ b/index.html
@@ -78,15 +78,26 @@
                 Klyntar é apresentado como o lar original dos simbiontes, também conhecidos como Klyntar, o mesmo nome do planeta. Os simbiontes foram criados pela entidade cósmica Knull, um deus das trevas que influenciou muitos dos simbiontes a serem malignos.
              </p>
              <h2 class="titulos">Agente Venom</h2>
-          <div class="img4">
+          <div class="odio">
              <p>
-                Em resumo, as edições de 2010 apresentam Venom como simbionte no corpo de Flash Thompson. Dessa forma, parte de um projeto de reformulação do personagem, de modo que agora ele trabalhe para o bem. Ademais, apresenta-o na condição d um simbionte que somente pode habitar o corpo do ex-militar por 48 horas, antes que tome o controle dele completamente.
+                Eugene "Flash" Thompson começou como um valentão na escola, atormentando Peter Parker, mas mais tarde se tornou seu amigo. Após o ensino médio, Flash se alistou no exército e, na guerra do Iraque, perdeu as pernas. Ele foi condecorado por sua coragem.
+
+             <p>
+                A vida de Flash mudou quando o governo dos EUA ofereceu a ele a chance de se unir ao simbionte Venom, recuperando a habilidade de andar e ganhando superpoderes. Como Agente Venom, Flash realizou missões secretas para o governo, controlando o simbionte para usar seus poderes para o bem.
              </p>
+             <p>
+                O traje do Agente Venom é geralmente representado com um visual militar, incluindo uma mistura de elementos de uniforme de combate e o visual clássico do Venom, mas mais contido e controlado. A história de Flash como Agente Venom é uma jornada de redenção e superação, mostrando sua evolução de um valentão a um verdadeiro herói.
+             </p>
+            </div>
+            <div class="img4">
                 <img src="img/av.jpg" alt="">
           </div>
          </section>
          <section>
-            <h1 class="titulos">Filmes</h1>
+            <h1 class="titulos" style="margin-top: 6% ;">Filmes</h1>
+            <div class="img5">
+                <img src="img/i422342.jpeg" alt="">
+            </div>
             <p> O personagem chegou às telas pela primeira vez em 2007, com o divisivo Homem-Aranha 3. O filme de Sam Raimi teve Topher Grace (That 70s Show) como o vilão, mas também mostrou o próprio Peter Parker (Tobey Maguire) sob o efeito do traje alienígena.
             </p>
             
@@ -115,12 +126,14 @@
              </div>
             <p>
                 A presença do simbionte afeta significativamente Peter Parker, inicialmente aumentando suas habilidades, mas também introduzindo uma luta interna contra a corrupção do poder. Isso cria um arco narrativo tenso e emocional, à medida que Peter lida com as consequências de estar ligado ao simbionte.
-
+            <p>
                 No jogo, o simbionte é apresentado como parte de uma tentativa desesperada de cura para a doença de Harry Osborn. Norman Osborn, seu pai, recorre ao simbionte como um último recurso para salvar a vida de Harry, resultando na transformação dele em Venom.
-
+            </p>
+            <p>
                 A amizade de longa data entre Peter Parker e Harry Osborn é central para a história. A transformação de Harry em Venom não só desafia Peter fisicamente, mas também emocionalmente, pois ele deve enfrentar um amigo próximo que agora é um adversário formidável.
                 A relação entre Peter, Miles, e Harry é profundamente explorada. A luta para salvar Harry e, ao mesmo tempo, combater Venom cria um conflito emocional profundo. As cenas narrativas destacam a dor e a esperança de Peter em recuperar seu amigo, enquanto lida com a ameaça imediata que Venom representa.
             </p>
+
             <h2 class="titulos">Marvel’s Venom </h2>
             <p>De acordo com o material vazado, a Insomniac está usando a mesma receita de bolo de Marvel’s Spider-Man Miles Morales para cozinhar a jogatina do Venom, isto é: um jogo menor, com campanha mais curta, que expande a lore e o universo do jogo principal, mantém o público conectado à série e prepara terreno para um game posterior.
 
@@ -131,8 +144,5 @@
          </section>
         </div>
     </main>
-    <footer class="rodape">
-        <p>Footer</p>
-    </footer>
 </body>
 </html>
