--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <nav id="menu">
             <input type="checkbox" id="menu-toggle">
-            <label for="menu-toggle" class="menu-icon">&#9776;</label>
+            <label for="menu-toggle" class="menu-icon"></label>
             <ul>
                 <li><a href="#" onclick="document.getElementById('menu-toggle').click()">HQ's</a></li>
                 <li><a href="#" onclick="document.getElementById('menu-toggle').click()">Filmes</a></li>
@@ -78,7 +78,8 @@
                 Klyntar é apresentado como o lar original dos simbiontes, também conhecidos como Klyntar, o mesmo nome do planeta. Os simbiontes foram criados pela entidade cósmica Knull, um deus das trevas que influenciou muitos dos simbiontes a serem malignos.
              </p>
              <h2 class="titulos">Agente Venom</h2>
-          <div class="odio">
+          <div class="img4">
+            <div class="textoav">
              <p>
                 Eugene "Flash" Thompson começou como um valentão na escola, atormentando Peter Parker, mas mais tarde se tornou seu amigo. Após o ensino médio, Flash se alistou no exército e, na guerra do Iraque, perdeu as pernas. Ele foi condecorado por sua coragem.
 
@@ -89,8 +90,9 @@
                 O traje do Agente Venom é geralmente representado com um visual militar, incluindo uma mistura de elementos de uniforme de combate e o visual clássico do Venom, mas mais contido e controlado. A história de Flash como Agente Venom é uma jornada de redenção e superação, mostrando sua evolução de um valentão a um verdadeiro herói.
              </p>
             </div>
-            <div class="img4">
+            <div class="imgav">
                 <img src="img/av.jpg" alt="">
+            </div>
           </div>
          </section>
          <section>
@@ -106,7 +108,7 @@
               </p>
          </section>
          <section>
-            <h1 class="titulos">Venom nos Jogos</h1>
+            <h1 class="titulos">Jogos</h1>
         
             <h2 class="titulos">Lego Marvel 1 e 2</h2>
             <p>
